--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Create formula
         run: |
-          mkdir Formula
+          mkdir -p Formula
           wget --no-check-certificate https://github.com/axelarnetwork/axelar-core/releases/download/v0.32.2/axelard-darwin-amd64-v0.32.2.zip.sha256
           SHA256=$(cat axelard-darwin-amd64-v0.32.2.zip.sha256)
           echo "class Heft < Formula
