--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -48,7 +48,7 @@ jobs:
           git config --local user.email "kalid@axelar.network"
           git config --local user.name "kalid"
           git add --all
-          git commit -m "create formula"
+          git diff-index --quiet HEAD -- ||  git commit -m "create formula"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
