--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -57,8 +57,8 @@ jobs:
 
       - name: Register the formula in homebrew
         run: |
-          brew tap kalidux/axelard git@github.com:kalidux/homebrew-axelard.git
- 
+          brew tap kalidux/axelard https://github.com/kalidux/homebrew-axelard.git
+          
       - name: install the binary
         run: |
           brew install axelard
