--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -39,6 +39,7 @@ jobs:
               bin.install "axelard"
             end
           end" > axelard.rb
+          cat axelard.rb
           mv axelard.rb Formula
           rm -fr axelard-darwin-amd64-v0.32.2.zip.sha256
   
