--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -42,6 +42,7 @@ jobs:
               url "https://github.com/axelarnetwork/axelar-core/releases/download/v0.32.2/axelard-darwin-amd64-v0.32.2"
               sha256 "$SHA256"
             end
+          end
 
             def install
               resource("axelard").stage do
