--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -34,7 +34,7 @@ jobs:
           echo "class Axelard < Formula
             desc "Axelard binary for darwin"
             homepage "https://axelar.network"
-            url url "https://github.com/axelarnetwork/axelar-core/releases/download/v0.32.2/axelard-darwin-amd64-v0.32.2.zip"
+            url "https://github.com/axelarnetwork/axelar-core/releases/download/v0.32.2/axelard-darwin-amd64-v0.32.2.zip"
             version "0.32.2"
             sha256 "$SHA256ZIP"
 
