--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -31,22 +31,30 @@ jobs:
           SHA256ZIP=$(cat axelard-darwin-amd64-v0.32.2.zip.sha256)
            wget --no-check-certificate https://github.com/axelarnetwork/axelar-core/releases/download/v0.32.2/axelard-darwin-amd64-v0.32.2.sha256
           SHA256=$(cat axelard-darwin-amd64-v0.32.2.sha256)         
+          
           echo "class Axelard < Formula
-            desc "Axelard binary for darwin"
+            desc "Axelard for Darwin"
             homepage "https://axelar.network"
             url "https://github.com/axelarnetwork/axelar-core/releases/download/v0.32.2/axelard-darwin-amd64-v0.32.2.zip"
             version "0.32.2"
             sha256 "$SHA256ZIP"
 
-            resource "axelard" do
+            resource "binary" do
               url "https://github.com/axelarnetwork/axelar-core/releases/download/v0.32.2/axelard-darwin-amd64-v0.32.2"
               sha256 "$SHA256"
             end
 
             def install
-              resource("axelard").stage do
-                bin.install "axelard"
-              end
+              # Install the binary file
+              resource("binary").stage { bin.install "axelard" }
+
+              # Make the binary file executable
+              chmod 0755, "#{bin}/axelard"
+            end
+
+            test do
+              system "#{bin}/axelard", "--version"
+            end
           end" > axelard.rb
           cat axelard.rb
           mv axelard.rb Formula
