--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -36,7 +36,7 @@ jobs:
             desc "Axelard for Darwin"
             homepage "https://axelar.network"
             url 'https://github.com/axelarnetwork/axelar-core/releases/download/v0.32.2/axelard-darwin-amd64-v0.32.2.zip'
-            version "0.32.2"
+            version '0.32.2'
             sha256 "$SHA256ZIP"
 
             resource "binary" do
