--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -45,4 +45,4 @@ jobs:
         run: |
           brew update
           brew install axelard
-          axelard-darwin-amd64-v0.32.2 --version
+          axelard-darwin-amd64-v0.32.2 version
