--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -43,4 +43,4 @@ jobs:
       - name: install the binary
         run: |
           brew install axelard
-          axelard version
+          axelard-darwin-amd64-v0.32.2 version
