--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -42,8 +42,5 @@ jobs:
           
       - name: install the binary
         run: |
-          brew update
-          brew search axelard 
-          brew info axelard
-          brew install axelard
+          brew install axelard --with-version=0.29.1
           axelard version
