--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -1,33 +1,47 @@
-class Axelard < Formula
-  desc "The Axelar Network Core Daemon"
-  homepage "https://github.com/axelarnetwork/axelar-core"
-  license "Apache-2.0"
+name: Package homebrew
 
-  # Default to the latest version if none is specified
-  if build.with? "version"
-    version "#{build.with("version")}"
-  else
-    version "0.32.2"
-  end
+on:
+  push:
 
-  if Hardware::CPU.arm?
-    url "https://github.com/axelarnetwork/axelar-core/releases/download/v#{version}/axelard-darwin-arm64-v#{version}.zip"
-    sha256 = File.read("#{url.sha256}").chomp
-  else
-    url "https://github.com/axelarnetwork/axelar-core/releases/download/v#{version}/axelard-darwin-amd64-v#{version}.zip"
-    sha256 = File.read("#{url.sha256}").chomp
 
-  end
+jobs:
+  package-binaries:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest]
 
-  def install
-    if Hardware::CPU.arm?
-      bin.install "axelard-darwin-arm64-v#{version}" => "axelard"
-    else
-      bin.install "axelard-darwin-amd64-v#{version}" => "axelard"
-    end
-  end
+    permissions:
+      contents: write
+      packages: write
+      id-token: write
 
-  test do
-    system "#{bin}/axelard", "version"
-  end
-end
+    steps:
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+          submodules: recursive
+  
+      - name: Commit files
+        run: |
+          git config --local user.email "kalid@axelar.network"
+          git config --local user.name "kalid"
+          git add --all
+          git diff-index --quiet HEAD -- ||  git commit -m "create formula"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
+
+      - name: Register the formula in homebrew
+        run: |
+          brew tap kalidux/axelard https://github.com/kalidux/homebrew-axelard.git
+          
+      - name: install the binary
+        run: |
+          brew update
+          brew install axelard --with-version=0.29.1
+          axelard version
