--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -43,5 +43,5 @@ jobs:
       - name: install the binary
         run: |
           brew update
-          brew install axelard --with-version=0.29.1
+          brew install axelard@0.29.1
           axelard version
