--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -43,5 +43,5 @@ jobs:
       - name: install the binary
         run: |
           brew update
-          brew install axelard
+          brew install axelard@0.32.0
           axelard version
