--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Register the formula in homebrew
         run: |
-          brew tap kalidux/axelard https://github.com/kalidux/homebrew-axelard.git
+          brew tap kalidux/axelard 
           
       - name: install the binary
         run: |
