--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -42,6 +42,6 @@ jobs:
           
       - name: install the binary
         run: |
-          brew update
+          brew uninstall axelard
           brew install axelard@0.32.0
           axelard version
