--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -1,49 +1,46 @@
-class Axelard < Formula
-  desc "The Axelar Network Core binary"
-  homepage "https://github.com/axelarnetwork/axelar-core"
-  license "Apache-2.0"
+name: Package homebrew
 
-  # Define the available versions and platforms
-  VERSIONS = {
-    "0.32.2" => {
-      amd64: "2303ed69ee0486814e09554449292b0b3e50f61e57248143c0d24f349df33f1d",
-      arm64: "a2abc8da15710bae0e77571dece93a8d367b1e416da193477211ed9330cdbdf4",
-    },
-  }
+on:
+  push:
 
-  # Determine the platform and URL based on the system architecture
-  if Hardware::CPU.arm?
-    platform = :arm64
-    puts "ARM architecture detected"
-    puts "CPU architecture: #{Hardware::CPU.arch}"
-    puts "Is 64-bit: #{Hardware::CPU.is_64_bit?}"
-  else
-    platform = :amd64
-    puts "Intel architecture detected"
-  end
 
-  # Select the latest version if none is specified
-  version = VERSIONS.keys.last
-  puts "Selected version: #{version}"
+jobs:
+  package-binaries:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest]
 
-  # Retrieve the SHA256 hash for the selected version and platform
-  sha256 = VERSIONS[version][platform]
-  ohai "Warning: No SHA256 hash found for Axelard version #{version} and platform #{platform}" unless sha256
+    permissions:
+      contents: write
+      packages: write
+      id-token: write
 
-  # Define the URL based on the selected version and platform
-  url "https://github.com/axelarnetwork/axelar-core/releases/download/v#{version}/axelard-darwin-#{platform}-v#{version}.zip"
-  sha256 sha256
+    steps:
 
-  # Install the binary
-  def install
-    if Hardware::CPU.arm?
-      bin.install "axelard-darwin-arm64-v#{version}" => "axelard"
-    else
-      bin.install "axelard-darwin-amd64-v#{version}" => "axelard"
-    end
-  end
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+          submodules: recursive
+  
+      - name: Commit files
+        run: |
+          git config --local user.email "kalid@axelar.network"
+          git config --local user.name "kalid"
+          git add --all
+          git diff-index --quiet HEAD -- ||  git commit -m "create formula"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
 
-  test do
-    system "#{bin}/axelard", "version"
-  end
-end
+      - name: Register the formula in homebrew
+        run: |
+          brew tap kalidux/axelard https://github.com/kalidux/homebrew-axelard.git
+          
+      - name: install the binary
+        run: |
+          brew install kalidux/axelard/axelard
+          axelard version
